finished property rights and collection collation - information handling note are all done

--- a/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/notes/notes_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/collectioncollation.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\modelling_the_costing_of_projects_notes.html">Collection Collation and Analysis to Make Decisions</a>
+                            <a href="notes_pages\collection_collation_and_analysis_to_make_decisions_notes.html">Collection Collation and Analysis to Make Decisions</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/propertyrights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\modelling_the_costing_of_projects_notes.html">Property Rights</a>
+                            <a href="notes_pages\property_rights_notes.html">Property Rights</a>
                         </div>
                     </div>
                 </div>
