--- a/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
+++ b/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
@@ -74,7 +74,7 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/collectioncollation.jpg)" title="alloy background">
+            <div class="notes-content-header" style="background-image:url(../../../images/modelCost.jpg)" title="alloy background">
                 <h1 style="color: white"><u><b>Modelling the costing of projects to achieve optimum 
                     outcome</b></u></h1>
             </div>
