--- a/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
+++ b/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
@@ -95,7 +95,7 @@
                 <h3><b>SWOT:</b></h3>
                 <h3>Strengths, Weaknesses, Opportunities, Threats.</h3>
                 <h3>This is the frame of how companies analyse how they are effecting the 
-                    magnet.
+                    market.
                 </h3>
                 <h3><b>Research techniques:</b></h3>
                 <h3>Key characteristics of customers include:</h3>
