--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -124,7 +124,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_joining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_JoiningTechniques.pdf">Joining Techniques</a>
+                            <a href="notes_pages\joining_techniques_notes.html">Joining Techniques</a>
                         </div>
                     </div>
                 </div>
