re shuffled tech dev page

--- a/notes/notes_topics/notes_pages/technological_developments_notes.html
+++ b/notes/notes_topics/notes_pages/technological_developments_notes.html
@@ -209,7 +209,7 @@
                 
                 <div class="notes-content-subheader">
                     <h2><hr>The use of smart materials and products for innovative applications<hr></h2>
-
+                </div>
                 <ul>REFER TO NOTES IN MATERIALS SECTION</ul>
 
                 <div class="notes-content-subheader">
