consumer rights done

--- a/notes/notes_topics/CurrentLegislation.html
+++ b/notes/notes_topics/CurrentLegislation.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/consumerRights.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\10. Current legislation\DTBase_CurrentLegislation_ConsumerRightsLegislation.pdf">Consumer Rights Legislation</a>
+                            <a href="notes_pages/consumer_rights_notes.html">Consumer Rights Legislation</a>
                         </div>
                     </div>
                 </div>
