--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -234,7 +234,8 @@
                         <ol><li>Begin by placing a circular, square or rectangular shaped peice of metal/wood into the lathes drive area</li>
                         <li>The metal/wood piece is typically secured using a pressure pad</li>
                         <li>Once in place, the lathe is activated to rotate and press the mould against the metal/wood piece</li>
-                        <li>The rotational force of the lathe then deforms the metal/wood piece to achieve the same shape as the mould</li></ol>
+                        <li>The rotational force of the lathe then deforms the metal/wood piece to achieve the same shape as the mould</li>
+                        <li>When metal/wood spinning is performed by hand, a worker manually presses the mould against metal/wood piece</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -244,21 +245,85 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Low cost</li>
-                                <li>Easy/simple</li>
-                                <li>Durable</li>
-                                <li>Smooth bubble free finish</li>
+                                <li>Complex designs/shapes can be made</li>
+                                <li>Energy efficient</li>
+                                <li>Good surface finish</li>
+                                <li>Can be computer controlled</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Long set time</li>
-                                <li>Irritant to skin</li>
+                                <li>Dangerous pieces can be ejected from machine potentially causing harm</li>
+                                <li>Some materials are very hard to turn</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Bone casts, sculpturing<br><br></h3>
+                <h3><b>Uses: </b>Table legs, table lamp, engine parts, handles<br><br></h3>
+
+                <h3><b><u>Stamping:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>Process is usually done via a CNC</li>
+                        <li>The CNC program moves the platen carrying the sheet metal</li>
+                        <li>Once the sheet metal is under the stamp the die is punched against the sheet metal</li>
+                        <li>The waste material is then recycled and the stamped metal is collected</li></ol>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Economical</li>
+                                <li>Can be done many times very quickly</li>
+                                <li>Highly automated</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Residual cracks appear along the edges</li>
+                                <li>Hardening along the edges</li>
+                                <li>Burrs can be created if clearance is excessive</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Shape sheet metal into shapes with holes, washers, cogs, tin can pull tabs<br><br></h3>
+
+                <h3><b><u>Pressing:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>A sheet metal is clamped over the die and held in the correct position using the back gauge</li>
+                        <li>A hydraulically operated punch is then pushed into the sheet metal</li>
+                        <li>Once the desired shape is formed the punch is retracted and the sheet component is ejected</li></ol>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>High strength in pressed parts</li>
+                                <li>Can be mass produced</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Expensive set up costs</li>
+                                <li>Large runs are needed to be economical</li>
+                                <li>Can make product heavy</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Shaping metal, patterns on metal trolley bases<br><br></h3>
             </div>
         </div>
 
