--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -142,7 +142,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_machining.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Machining.pdf">Machining</a>
+                            <a href="notes_pages\machining_notes.html">Machining</a>
                         </div>
                     </div>
                 </div>
