--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -160,7 +160,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_moulding.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_Moulding.pdf">Moulding</a>
+                            <a href="notes_pages\moulding_notes.html">Moulding</a>
                         </div>
                     </div>
                 </div>
