--- a/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
+++ b/notes/notes_topics/ProcessesTechniquesAndSpecialistTools.html
@@ -106,7 +106,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/PTST/PTST_note_finishing.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\3. Processes, techniques and specialist tools\DT_ProcessesAndTools_FinishingTechniques.pdf">Finishing Techniques</a>
+                            <a href="notes_pages\finishing_techniques_notes.html">Finishing Techniques</a>
                         </div>
                     </div>
                 </div>
