--- a/notes/notes_topics/AdoptingSafeWorkingPractices.html
+++ b/notes/notes_topics/AdoptingSafeWorkingPractices.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/safeWorkingPractice.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\7. Adopting safe working practices, recognise and react to potential hazards\DTBase_Adopting_safe_working_practices.pdf">Adopting Safe Working Practices</a>
+                            <a href="notes_pages\safe_working_notes.html">Adopting Safe Working Practices</a>
                         </div>
                     </div>
                 </div>
