--- a/notes/notes_topics/FeaturesOfManufacturingIndustries.html
+++ b/notes/notes_topics/FeaturesOfManufacturingIndustries.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/massproduction.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
+                            <a href="notes_pages\methods_of_production_notes.html">Methods of Production</a>
                         </div>
                     </div>
                 </div>
