--- a/notes/notes_topics/FurtherProcessesAndTechniques.html
+++ b/notes/notes_topics/FurtherProcessesAndTechniques.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/projectManagement.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
+                            <a href="notes_pages/project_management_notes.html">Project Management Systems</a>
                         </div>
                     </div>
                 </div>
