--- a/notes/notes_topics/FurtherProcessesAndTechniques.html
+++ b/notes/notes_topics/FurtherProcessesAndTechniques.html
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/createEvaluateDesignIdea.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
+                            <a href="notes_pages/sta_to_explore_notes.html">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
                         </div>
                     </div>
                 </div>
