--- a/notes/notes_topics/FeaturesOfManufacturingIndustries.html
+++ b/notes/notes_topics/FeaturesOfManufacturingIndustries.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
+                            <a href="notes_pages\quality_control_systems_notes.html">Quality Monitoring Systems</a>
                         </div>
                     </div>
                 </div>
