--- a/notes/notes_topics/FurtherProcessesAndTechniques.html
+++ b/notes/notes_topics/FurtherProcessesAndTechniques.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
+                            <a href="notes_pages/stages_of_a_products_life_cycle_notes.html">Stages of a Product's Life Cycle</a>
                         </div>
                     </div>
                 </div>
