--- a/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/cleanerTech.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_WiderIssuesCleanerTechnologies.pdf">Wider Issues of Using Cleaner Technologies</a>
+                            <a href="notes_pages/wider_issues_tech_notes.html">Wider Issues of Using Cleaner Technologies</a>
                         </div>
                     </div>
                 </div>
