--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -82,8 +82,7 @@
                 <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
-                        <li>Wood finishes</li>
-                        <li>Metal finishes</li>
+                        <li>Finishes</li>
                         <li>Paper and board finishes</li>
                     </ul>
                 </div>
@@ -105,7 +104,7 @@
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Chips away</li>
+                                <li>Chips/flakes away</li>
                                 <li>Environmently unfriendly</li>
                             </ul>
                         </td>
@@ -204,7 +203,10 @@
                         <td class="notes-table-data-pro">
                             <ul>
                                 <li>Can be done in a range of colours</li>
-                                <li>Very durable/hard finish</li>
+                                <li>Very durable finish</li>
+                                <li>Hard finish/scratch resistant</li>
+                                <li>Thin finish - doesn't block holes in product</li>
+                                <li>Heat resistant finish</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
@@ -237,6 +239,8 @@
                                 <li>Easy to do</li>
                                 <li>Improves mechanical properties</li>
                                 <li>Improves aesthetics appeal</li>
+                                <li>Cost effective</li>
+                                <li>Durable finish</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
