--- a/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/productLifeCycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\9. Designing for maintenance and the cleaner environment\DTBase_DesigningForMaintenanceAndCleanerEnvironment_ProductLifeCycle.pdf">Product Life Cycle</a>
+                            <a href="notes_pages/product_life_cycle_notes.html">Product Life Cycle</a>
                         </div>
                     </div>
                 </div>
