--- a/notes/notes_topics/CurrentLegislation.html
+++ b/notes/notes_topics/CurrentLegislation.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/healthandsafetylaws.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\10. Current legislation\DTBase_CurrentLegislation_HealthAndSafetyLaws.pdf">Health and Safety Laws</a>
+                            <a href="notes_pages/health_and_safety_laws_notes.html">Health and Safety Laws</a>
                         </div>
                     </div>
                 </div>
