--- a/notes/notes_topics/FeaturesOfManufacturingIndustries.html
+++ b/notes/notes_topics/FeaturesOfManufacturingIndustries.html
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/modernManufacturingMethods.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
+                            <a href="notes_pages\modern_manufacturing_methods_notes.html">Modern Manufacturing Methods and Systems</a>
                         </div>
                     </div>
                 </div>
